--- a/CSS/event.css
+++ b/CSS/event.css
@@ -453,7 +453,7 @@ footer {
     line-height: 1.5rem;
   }
   .time h2 {
-    font-size: 0.9rem;
+    font-size: 0.7rem;
     font-weight: 500;
   }
   .organised {
@@ -477,7 +477,7 @@ footer {
   }
   .session {
     width: 100%;
-    height: 65vh;
+    height: 60vh;
     padding-left: 2rem;
     margin-top: 0.5rem;
     border-right: none;
@@ -504,6 +504,8 @@ footer {
   }
   .slides p {
     font-size: 0.8rem;
+    padding-right: 0rem;
+    margin-right: 4rem;
   }
   .clock {
     height: 7rem;
