--- a/CSS/event.css
+++ b/CSS/event.css
@@ -414,10 +414,10 @@ footer {
     margin: 0rem 2rem;
   }
   .banner img {
-    height: 3rem;
-    width: 3rem;
+    height: 4rem;
+    width: 4rem;
     padding-top: 0rem;
-    padding-left: 0rem;
+    padding-left: 0.3rem;
     margin-top: 5.5rem;
     /* margin-left: 15rem; */
   }
@@ -563,10 +563,10 @@ footer {
     justify-content: space-around;
   }
   .margin-left {
-    margin-left: 0.2rem;
+    margin-left: 0.1rem;
   }
   .margin-right {
-    margin-right: 1rem;
+    margin-right: 0.1rem;
   }
   .right_footer p {
     font-size: 0.6rem;
@@ -577,9 +577,8 @@ footer {
     margin-right: 8px;
   }
   .right_footer a {
-    font-size: 0.7rem;
     margin-right: 8px;
-    margin-left: 7px;
+    font-size: 0.6rem;
   }
   .copyright p {
     font-size: 0.6rem;
@@ -589,6 +588,7 @@ footer {
   }
   .right_footer {
     padding: 5px;
+    width: 55%;
   }
 }
 .nav-active {
