--- a/CSS/blogstyle.css
+++ b/CSS/blogstyle.css
@@ -400,7 +400,7 @@ footer {
     width: 80%;
   }
   .p2p {
-    flex-direction: column;
+    flex-direction: column-reverse;
     margin: 0.8rem;
   }
   .content2 {
