--- a/CSS/blogstyle.css
+++ b/CSS/blogstyle.css
@@ -271,39 +271,6 @@ body {
   font-size: 1rem;
   margin-top: 0.2rem;
 }
-.copyright {
-  width: 55%;
-}
-footer {
-  width: 100vw;
-  height: 8vh;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: rgb(37, 37, 37);
-}
-.right_footer {
-  width: 30%;
-  /* margin-right: 2rem; */
-}
-.right_footer p {
-  display: flex;
-  justify-content: space-around;
-}
-.right_footer span {
-  margin-right: 30px;
-}
-.right_footer a {
-  text-decoration: none;
-  color: white;
-  font-size: 1rem;
-  font-weight: 700;
-  margin-right: 30px;
-}
-.right_footer a:hover {
-  color: gray;
-}
-
 .line1 {
   background-color: whitesmoke;
   padding: 2px;
@@ -325,6 +292,94 @@ footer {
 .burger {
   display: none;
   cursor: pointer;
+}
+footer {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 45vh;
+  background-color: rgb(22, 22, 22);
+}
+.foot_logo {
+  position: relative;
+  margin-top: 2rem;
+  max-width: 100vw;
+}
+.foot_logo:before {
+  content: "";
+  display: block;
+  width: 28rem;
+  height: 2px;
+  background: whitesmoke;
+  position: absolute;
+  left: 5rem;
+  top: 70%;
+}
+.foot_logo::after {
+  content: "";
+  display: block;
+  width: 28rem;
+  height: 2px;
+  background: whitesmoke;
+  position: absolute;
+  right: 5rem;
+  top: 70%;
+}
+.foot_logo img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 12.5rem;
+  height: 3.5rem;
+}
+.cont {
+  width: 104vw;
+  height: 20vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: rgb(22, 22, 22);
+  font-family: "Exo 2", sans-serif;
+  font-weight: 300;
+}
+.links {
+  display: flex;
+  flex-direction: column;
+  height: 10vh;
+  justify-content: space-around;
+}
+.link {
+  text-decoration: none;
+  font-size: 1rem;
+  color: whitesmoke;
+  font-weight: 600;
+}
+.icons {
+  text-decoration: none;
+  width: 25%;
+  font-size: 2.2rem;
+  display: flex;
+  justify-content: space-around;
+}
+.icons a {
+  color: whitesmoke;
+}
+.regis {
+  display: block;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+.btn_register {
+  cursor: pointer;
+  padding: 0.4rem;
+  color: whitesmoke;
+  border: none;
+  font-size: 1rem;
+  background-color: rgb(22, 22, 22);
+}
+.btn_register:hover {
+  border: 1px solid whitesmoke;
+  border-radius: 0.2rem;
 }
 @media screen and (max-width: 720px) {
   body {
@@ -367,28 +422,37 @@ footer {
     margin-top: 2rem;
     margin-right: 2rem;
   }
-  .right_footer {
-    width: 70%;
+  .foot_logo:before {
+    width: 5rem;
+    left: 0.7rem;
+    top: 70%;
   }
-  .right_footer p {
-    font-size: 0.6rem;
-    justify-content: stretch;
+  .foot_logo::after {
+    width: 5rem;
+    right: 0.7rem;
+    top: 70%;
   }
-  .right_footer span {
-    margin-right: 15px;
+  .foot_logo img {
+    width: 6rem;
+    height: 2.5rem;
   }
-  .right_footer a {
-    font-size: 0.5rem;
-    margin-right: 15px;
+  .link {
+    font-size: 0.8rem;
+    color: whitesmoke;
+    font-weight: 600;
   }
-  .copyright p {
-    font-size: 0.6rem;
+  .icons {
+    width: 30%;
+    font-size: 1.2rem;
   }
-  .copyright {
-    padding: 5px;
+  .regis {
+    margin-bottom: 0.3rem;
   }
-  .right_footer {
-    padding: 5px;
+  .cont {
+    width: 100vw;
+  }
+  footer {
+    height: 38vh;
   }
   .p1p {
     flex-direction: column;
