--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -82,6 +82,7 @@ body {
   /* background-image: url(3999947.jpg); */
   background-repeat: no-repeat;
   background-size: cover;
+  overflow-x: hidden;
 }
 .cont {
   padding-left: 6.25rem;
@@ -347,7 +348,7 @@ label {
   border-radius: 50%;
 }
 
-.fa-envelope {
+.fa {
   padding: 18px;
   color: black;
   background-color: white;
@@ -365,47 +366,93 @@ label {
   padding-bottom: 40px;
   background-size: cover;
 }
-
+.cont_foot {
+  width: 104vw;
+  height: 20vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  /* background-color: rgb(22, 22, 22); */
+}
 footer {
-  background: rgba(0, 0, 0, 0.89);
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 45vh;
+  background-color: rgb(22, 22, 22);
+  font-family: "Exo 2", sans-serif;
+}
+.foot_logo {
+  position: relative;
+  margin-top: 2rem;
+  max-width: 100vw;
+}
+.foot_logo:before {
+  content: "";
+  display: block;
+  width: 28rem;
+  height: 2px;
+  background: whitesmoke;
+  position: absolute;
+  left: 5rem;
+  top: 70%;
+}
+.foot_logo::after {
+  content: "";
+  display: block;
+  width: 28rem;
+  height: 2px;
+  background: whitesmoke;
+  position: absolute;
+  right: 5rem;
+  top: 70%;
+}
+.foot_logo img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 12.5rem;
+  height: 3.5rem;
+}
+
+.links_foot {
+  display: flex;
+  flex-direction: column;
   height: 10vh;
-  font-weight: 600;
-  padding-top: 23px;
-  padding-bottom: 10px;
-  font-family: "Raleway", sans-serif;
+  justify-content: space-around;
 }
-.copyright {
+.link_foot {
+  text-decoration: none;
   font-size: 1rem;
+  color: whitesmoke;
+  font-weight: 600;
 }
-
-.copy1 {
-  padding-left: 100px;
-  padding-top: 40px;
+.icons_foot {
   text-decoration: none;
-  font-weight: 500;
-  color: white;
-  /* margin: 2em; */
+  width: 25%;
+  font-size: 2.2rem;
+  display: flex;
+  justify-content: space-around;
 }
-.copy2 {
-  text-decoration: none;
-  font-weight: 300;
-  color: white;
+.icons_foot a {
+  color: whitesmoke;
 }
-
-.con1 {
-  text-decoration: none;
-  color: white;
-  padding-left: 30px;
-  margin-left: 27em;
+.regis {
+  display: block;
+  text-align: center;
+  margin-bottom: 2rem;
 }
-.con2 {
-  display: inline;
-  /* margin-right: 0px; */
-  padding-left: 30px;
-  padding-right: 20px;
-  margin-left: 29px;
-  text-decoration: none;
-  color: white;
+.btn_register {
+  cursor: pointer;
+  padding: 0.4rem;
+  color: whitesmoke;
+  border: none;
+  font-size: 1rem;
+  background-color: rgb(22, 22, 22);
+}
+.btn_register:hover {
+  border: 1px solid whitesmoke;
+  border-radius: 0.2rem;
 }
 .secondaryText {
   display: inline;
@@ -480,7 +527,8 @@ footer {
   }
 
   .cont {
-    padding-left: 4%;
+    padding-left: 5%;
+    margin-bottom: 1rem;
   }
 
   .cont-bottom {
@@ -531,33 +579,8 @@ footer {
   .toggle .bar-3 {
     transform: rotate(45deg) translate(-6px, -6px);
   }
-
-  .copyright a {
-    font-size: 0.6rem;
-  }
-
-  .copy1 {
-    padding-left: 5%;
-  }
-  .con1 {
-    margin-left: auto;
-    padding-left: 6%;
-  }
-
   .secondaryText {
     padding-left: 6%;
-  }
-
-  .con2 {
-    margin-left: 0%;
-    padding-left: 5%;
-    padding-right: 0%;
-  }
-
-  footer {
-    padding-top: 12px;
-    padding-bottom: 10px;
-    height: 7vh;
   }
 
   .main-container {
@@ -620,5 +643,37 @@ footer {
   }
   #message {
     margin-left: 5%;
+  }
+  .foot_logo:before {
+    width: 5rem;
+    left: 0.7rem;
+    top: 70%;
+  }
+  .foot_logo::after {
+    width: 5rem;
+    right: 0.7rem;
+    top: 70%;
+  }
+  .foot_logo img {
+    width: 6rem;
+    height: 2.5rem;
+  }
+  .link_foot {
+    font-size: 0.8rem;
+    color: whitesmoke;
+    font-weight: 600;
+  }
+  .icons_foot {
+    width: 30%;
+    font-size: 1.2rem;
+  }
+  .regis {
+    margin-bottom: 0.3rem;
+  }
+  footer {
+    height: 38vh;
+  }
+  .cont_foot {
+    width: 100vw;
   }
 }
