--- a/CSS/blogstyle.css
+++ b/CSS/blogstyle.css
@@ -393,7 +393,7 @@ footer {
   }
   .navlinks {
     position: absolute;
-    top: 10vh;
+    top: 12vh;
     flex-direction: column;
     align-items: center;
     height: 50vh;
@@ -449,7 +449,7 @@ footer {
     margin-bottom: 0.3rem;
   }
   .cont {
-    width: 100vw;
+    justify-content: space-around;
   }
   footer {
     height: 38vh;
